# hot_runner

backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250412_0001_initial.py  20250412_0002_p1_p2_work_library.py  20260206_0001_sel_catalog_tables.py  20260212_0002_sel_mold_demo_seed.py  20260412_0003_sel_flat_tables_demo_seed.py  20260413_0001_p3_rd_research_m3.py  20260413_0002_p4_field_site.py  20260413_0003_p5_integration_dashboard.py  20260413_0004_designer_p5_perms.py  20260419_0005_sel_mold_dict_uuid.py  20260419_0006_sel_product_dict_uuid.py  20260419_0007_sel_mold_material_id.py  20260419_0008_sel_mold_hot_runner_spec.py  20260420_0001_hrspec_spec_dict_fk.py  20260420_0002_hrspec_dict_supplement.py  20260421_0001_manifold_detail_dict_seed.py  20260422_0001_main_nozzle_detail_dict_seed.py  20260423_0001_hot_nozzle_detail_dict_seed.py  20260424_0001_drive_system_detail_dict_seed.py  20260425_0001_sel_plastic_grade.py  20260426_0001_sel_material_property_plastic_grade.py  20260427_0001_sel_mold_injection_machine_brand.py  20260428_0001_injection_machine_model_catalog.py  20260429_0001_backfill_injection_machine_demo_models.py  20260430_0001_sel_customer_equipment_library.py  20260501_0001_sel_hot_runner_system_ownership.py  20260502_0001_wizard_cae_flow_dict_seed.py  20260503_0001_mnz_remove_adapter_add_other.py  20260504_0001_drop_mnz_other_accessories_alias.py  (+11 more)
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  security.py  serve_cli.py
backend/scripts/: seed.py
(+189 files in other folders)
